--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "next": "latest",
     "next-auth": "^4.9.0",
     "next-sanity": "^0.5.2",
+    "npm": "^8.13.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hot-toast": "^2.2.0",
     "react-timeago": "^7.1.0",
-    "react-twitter-embed": "^4.0.4"
+    "react-twitter-embed": "^4.0.4",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
